--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 .fondo {
-    background-image: url('../../public/assets/fondo.jpg');
+    background-image: url('../../public/assets/sunarp.png');
 }
 button {
   border: none;
