Fix: horario de las 9 resta correcta -Se corrigió el error del marcado antes de las 9 que se le consideraba como tardanza -Se modificó un fragmento para temas de responsive en la tabla -Se está añadiendo la sección de add tolerancia

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -206,4 +206,7 @@ button svg {
 .browse-button:hover {
   background-color: rgb(14, 14, 14);
 }
+dialog::backdrop {
+  background-color: rgba(0, 0, 0, 0.5); /* Fondo semitransparente */
+}
 
